# Taskio

./: .gitignore  README.md
client/Taskio/: settings.gradle.kts
client/Taskio/app/: build.gradle.kts
client/Taskio/app/src/androidTest/java/com/yt_hsgw/taskio/: ExampleInstrumentedTest.kt
client/Taskio/app/src/main/: AndroidManifest.xml
client/Taskio/app/src/main/java/com/yt_hsgw/taskio/: MainActivity.kt  MainApp.kt  TaskScreen.kt  TaskViewModel.kt
client/Taskio/app/src/main/java/com/yt_hsgw/taskio/api/: ApiResponseHandler.kt  ApiResult.kt  RetrofitClient.kt  TaskApi.kt
client/Taskio/app/src/main/java/com/yt_hsgw/taskio/model/: ApiError.kt  TaskItem.kt  TaskLogResponse.kt  TaskRequest.kt  TaskResponse.kt
client/Taskio/app/src/main/java/com/yt_hsgw/taskio/navigation/: Navigation.kt
client/Taskio/app/src/main/java/com/yt_hsgw/taskio/screens/: CalendarScreen.kt  HomeScreen.kt  LogScreen.kt  ProfileScreen.kt  SplashScreen.kt
client/Taskio/app/src/main/java/com/yt_hsgw/taskio/utils/: DateTimeUtils.kt
client/Taskio/app/src/main/res/values/: themes.xml
client/Taskio/app/src/test/java/com/yt_hsgw/taskio/: ExampleUnitTest.kt
client/Taskio/gradle/: libs.versions.toml
client/Taskio/gradle/wrapper/: gradle-wrapper.properties
docs/: api.md  requirements.md  use_cases.md
server/: API.md  ARCHITECTURE.md  Cargo.toml  README.md
server/src/: config.rs  errors.rs  main.rs  state.rs  utils.rs
server/src/models/: mod.rs  task.rs  task_log.rs
server/src/routes/: health.rs  mod.rs  task_logs.rs  tasks.rs
server/src/tests/: task_routes_test.rs
(+4 files in other folders)
