[package]
name = "taskio-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
tower-http = { version = "0.5", features = ["cors"] }

# API エラー型用 (オプション)
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
